# emag-stock-250307

./: .gitignore  README.md  TODO  convert_to_csv.py  main.py  pyproject.toml  test.py  test_cart_page.py  test_list_page.py
captcha_test/: bright_data_test.py  exceptions.py  main.py  models.py  test_proxy.py  utils.py
emag_stock_monitor/: __init__.py  browser_util.py  exceptions.py  logger.py  main.py  models.py  regexps.py  urls.py
emag_stock_monitor/constants/: __init__.py  regex.py  url.py  xpath.py
emag_stock_monitor/page_handlers/: __init__.py  cart_page.py  common.py  list_page.py
emag_stock_monitor/utils/: __init__.py  browser_context_util.py  browser_util.py  parse_util.py
emag_stock_monitor/xpaths/: __init__.py  cart_page_xpath.py  list_page_xpath.py
js/: handle-cart-dialog.js  hide-cookie-banner.js
wheels/: scraper_utils-1.0.2-py3-none-any.whl
