[project]
name = "emag-stock-monitor"
version = "0.0.1"
description = "eMAG 库存监控"
authors = [{ name = "ukk119", email = "jdycty2002@163.com" }]
requires-python = "^3.13"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "scraper-utils @ https://github.com/kuku119/scraper-utils/releases/download/v1.0.5/scraper_utils-1.0.5-py3-none-any.whl",
    "pandas (>=2.2.3,<3.0.0)",
    "scrapy (>=2.12.0,<3.0.0)",
    "scrapy-playwright (>=0.0.43,<0.0.44)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
jupyter = "^1.1.1"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true
line-length = 110
